# AniQuest

./: .gitignore  README.md  Ranker_for_warm_users.ipynb  app.js  app.py  hello.py  index.html  model_train_cold_user.ipynb  pyproject.toml  requirements.txt  style.css
src/: anime_list_preprocess.py  app.py  cold_app.py  llm.py  reranker_cold.py  reranker_warm.py  temp.py  warm_app.py
src/data/: user_anime_list.csv  user_similarities.csv
src/data/1a2049b5-fbe9-4bb2-9eab-5fff6c269979/: index_metadata.pickle
src/data/7f68b798-5e73-4d98-b9f7-7298ca7d8cc7/: index_metadata.pickle
